kustomize/environments/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: red-acre-test-dev.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: red-acre-test-frontend-service-dev
            port: 
              number: 3000
      - pathType: Exact
        path: "/stats"
        backend:
          service:
            name: red-acre-test-backend-service-dev
            port: 
              number: 5000
